--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -6,7 +6,7 @@
 # :=0 --> Disable IPv6 support
 USE_IPV6:=1
 USE_SSE2:=1
-
+USE_UPNP:=1
 LINK:=$(CXX)
 
 DEFS=-DBOOST_SPIRIT_THREADSAFE -D_FILE_OFFSET_BITS=64
